--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.6",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
